source/references/2.6.0/report.markdown
---
canonical: "/references/latest/report.html"
layout: default
title: Report Reference
---


Report Reference
=====


<p><strong>This page is autogenerated; any changes will get overwritten</strong> <em>(last generated on Tue May 03 09:52:23 -0700 2011)</em></p>

<p>Puppet clients can report back to the server after each transaction.  This
transaction report is sent as a YAML dump of the
<code>Puppet::Transaction::Report</code> class and includes every log message that was
generated during the transaction along with as many metrics as Puppet knows how
to collect.  See Reports and Reporting
for more information on how to use reports.</p>
<p>Currently, clients default to not sending in reports; you can enable reporting
by setting the <code>report</code> parameter to true.</p>
<p>To use a report, set the <code>reports</code> parameter on the server; multiple
reports must be comma-separated.  You can also specify <code>none</code> to disable
reports entirely.</p>
<p>Puppet provides multiple report handlers that will process client reports:</p>

----------------

### http

<p>Send report information via HTTP to the <code>reporturl</code>. Each host sends
its report as a YAML dump and this sends this YAML to a client via HTTP POST.
The YAML is the <code>report</code> parameter of the request.&quot;</p>


----------------

### log

<p>Send all received logs to the local log destinations.  Usually
the log destination is syslog.</p>


----------------

### rrdgraph

<p>Graph all available data about hosts using the RRD library.  You
must have the Ruby RRDtool library installed to use this report, which
you can get from <a href="http://rubyforge.org/projects/rubyrrdtool/">the RubyRRDTool RubyForge page</a>.  This package may also
be available as <code>ruby-rrd</code> or <code>rrdtool-ruby</code> in your distribution's package
management system.  The library and/or package will both require the binary
<code>rrdtool</code> package from your distribution to be installed.</p>
<p>This report will create, manage, and graph RRD database files for each
of the metrics generated during transactions, and it will create a
few simple html files to display the reporting host's graphs.  At this
point, it will not create a common index file to display links to
all hosts.</p>
<p>All RRD files and graphs get created in the <code>rrddir</code> directory.  If
you want to serve these publicly, you should be able to just alias that
directory in a web server.</p>
<p>If you really know what you're doing, you can tune the <code>rrdinterval</code>,
which defaults to the <code>runinterval</code>.</p>


----------------

### store

<p>Store the yaml report on disk.  Each host sends its report as a YAML dump
and this just stores the file on disk, in the <code>reportdir</code> directory.</p>
<p>These files collect quickly -- one every half hour -- so it is a good idea
to perform some maintenance on them if you use this report (it's the only
default report).</p>


----------------

### tagmail

<p>This report sends specific log messages to specific email addresses
based on the tags in the log messages.  See the
tag documentation for more information
on tags.</p>
<p>To use this report, you must create a <code>tagmail.conf</code> (in the location
specified by <code>tagmap</code>).  This is a simple file that maps tags to
email addresses:  Any log messages in the report that match the specified
tags will be sent to the specified email addresses.</p>
<p>Tags must be comma-separated, and they can be negated so that messages
only match when they do not have that tag.  The tags are separated from
the email addresses by a colon, and the email addresses should also
be comma-separated.</p>
<p>Lastly, there is an <code>all</code> tag that will always match all log messages.</p>
<p>Here is an example tagmail.conf:</p>
<pre><code>
all: me&#64;domain.com
webserver, !mailserver: httpadmins&#64;domain.com
</code></pre>
<p>This will send all messages to <code>me&#64;domain.com</code>, and all messages from
webservers that are not also from mailservers to <code>httpadmins&#64;domain.com</code>.</p>
<p>If you are using anti-spam controls, such as grey-listing, on your mail
server you should whitelist the sending email (controlled by <code>reportfrom</code> configuration option) to ensure your email is not discarded as spam.</p>
<hr />
<p><em>This page autogenerated on Tue May 03 09:52:23 -0700 2011</em></p>
